Update 1. Introduction to Ethiopian LFS.md

--- a/Support/B - Country Survey Details/ETH/LFS/1. Introduction to Ethiopian LFS.md
+++ b/Support/B - Country Survey Details/ETH/LFS/1. Introduction to Ethiopian LFS.md
@@ -44,7 +44,7 @@ More details of the sampling frame & procedure are included in each year's annua
 ```
 For the purpose of the survey the country was divided into three broad categories. That is; rural, major urban center and other urban center categories.
 
-Category I: Rural: - This category consists of the rural areas of nine regions and one rural part of city administration found in the country. Regarding the survey domains, each region or city administration was considered to be a domain (Reporting Level) for which major findings of the survey are reported. This category totally comprises 10 reporting levels. A stratified two-stage cluster sample design was used to select samples in which the primary sampling units (PSUs) were EAs. Households per sample EA were selected as a second Stage Sampling Unit (SSSU) and the survey questionnaire finally administered to all members of sample households.
+Category I: Rural: - This category consists of the rural areas of nine regions and one rural part of city administration found in the country. Regarding the survey domains, each region or city administration was considered to be a domain (Reporting Level) for which major findings of the survey are reported. This category totally comprises 10 reporting levels. A stratified two-stage cluster sample design was used to select samples in which the primary sampling units (PSU) were EAs. Households per sample EA were selected as a Second Stage Sampling Unit (SSU) and the survey questionnaire finally administered to all members of sample households.
 
 Category II:- Major urban centers:- In this category all regional capitals and 15 other major urban centers that had a population size of 100,000 or more in 2007 were included. Each urban center in this category was considered as a reporting level.This category has totally 26 reporting levels. In this category too, in order to select the samples, a stratified two-stage cluster sample design was implemented. The primary sampling units were EAs. Households from each sample EA were then selected as a Second Stage Unit.
 
@@ -64,12 +64,12 @@ The official reports detailed results by gender, sector (i.e. urban or rural), a
 
 In general, so far we do not have information on the version of Ethiopia's National Occupation and Industry Classifications (NOIC). The full codebooks of NOIC and its history of change are unkown to us. The only version er know for sure is NOIC 1994 which is used for LFS 1999. The codebook of NOIC 1994 can be found [here.](utilities/ETH_national_mappings_1999.xlsx) 
 
+Even though the version information of NOIC is missing, we still managed to map the original industry and occupation variables in the raw datasets according to annual reports. The NOIC of LFS 2005 is based on ISIC Rev.3 and its ISCO counterpart is ISCO 88; whereas the ISIC and ISCO used for year 2013 and 2021 are ISIC Rev.4 and ISCO08. We followed the guide in ETH LFS annual reports and completed the mapping this way but we are still waiting for more detials of the NOIC version and labeling of each NOIC subcategories to double check the mapping. 
 
-
-Regarding industrial classification, 3 versions of Pakistani Standard Industrial Classification (PSIC) were involved from 1992 to 2020 – PSIC 1970, 2007, 2010. They are based on different versions of ISIC and were used in different years of LFS. in the [separate document.](Correspondence_National_International_Classifications.md)
-
-
-In general, each single version of national standards, regardless of industry or occupation, is almost identical to their international counterparts at two-digit level. Details about industrial and occuaptional mappings are covered in this [separate document.](Correspondence_National_International_Classifications.md)
+- For year **1999**, we did not harmonize `indsutrycat_isic` since the original unlabled industry variable have too many unmatched categories with ISIC Rev.3. We harmonized `occup_isco` at two-digit level. 
+- For year **2005**, we mapped `industrycat_isic` at three-digit level and `occup_isco` at two-digit level.
+- For year **2013**, we mapped `industrycat_isic` at four-digit level with only few changes and `occup_isco` at two-digit level.
+- For year **2021**, we mapped both `industrycat_isic` and `occup_isco` at four-digit level with some changes to the codes. And here are the correspondence tables for [industry](utilities/industry_2021.xlsx) and [occupation](utilities/ISCO_2021_harmonization.xlsx).
 
 
 ### Helper files for region, zone and wereda naming
