--- a/Support/B - Country Survey Details/ETH/LFS/1. Introduction to Ethiopian LFS.md
+++ b/Support/B - Country Survey Details/ETH/LFS/1. Introduction to Ethiopian LFS.md
@@ -22,7 +22,7 @@ Years and sample size of LFS harmonized for GLD are:
 | :------:	| :-------:		| :-------:	 	| :-------:	 	| :-------:	| :-------:	|
 | [1999](utilities/ETH_1999_LFS_report.pdf)  | 81,339        | 366,274      |  54,430,917  |   81,473   | 54,453,238|
 | [2005](utilities/Labour_force_survey_Final_Report_2005.pdf)  | 54,443        | 230,680      |  63,228,599  |   54,484   | 63,228,600|
-| [2013](utilities/nlfs_analytical_report labor_force_2013.pdf)  | 58,321        | 240,660      |  80,444,148  |   58,396   | 80,444,148|
+| [2013](utilities/nlfs_analytical_report_labor_force_2013.pdf)  | 58,321        | 240,660      |  80,444,148  |   58,396   | 80,444,148|
 | [2021](utilities/FINAL_STATISTICAL_REPORT_ON_THE_2021_LMS.docx)  | 43,329        | 174,613      |  98,035,894 |    49,916   | 98,038,146|
 
 All the four years' official annual reports are provided in the table above through the links attached to each year. The officially reported HH sample size all came from their annual reports. 
