Update 1. Introduction to Ethiopian LFS.md

--- a/Support/B - Country Survey Details/ETH/LFS/1. Introduction to Ethiopian LFS.md
+++ b/Support/B - Country Survey Details/ETH/LFS/1. Introduction to Ethiopian LFS.md
@@ -72,18 +72,17 @@ Even though the version information of NOIC is missing, we still managed to map 
 - For year **2021**, we mapped both `industrycat_isic` and `occup_isco` at four-digit level with some changes to the codes. And here are the correspondence tables for [industry](utilities/industry_2021.xlsx) and [occupation](utilities/ISCO_2021_harmonization.xlsx).
 
 
+### Mapping years of education
+
+
 ### Helper files for region, zone and wereda naming
 
-We created several codelist for `subnatid2`, `migrated_from_code`, and `vocational_field_orig` according to PBS's coding scheme for each year. These files and their use can be found in the table below.
+We created several codelist for `subnatid2` and `subnatid3` according to CSA's codebooks of EA. These files and their use can be found in the table below.
 
 | **Document**	| **Description**	| **Referrence**|
 | :---------:	| :-------------: | :-----------: |   
-| [PAK_city_code](utilities/Additional%20Data/PAK_city_code.dta) | A code list containing four-digit codes, names, and urban status of districts covered in the raw dataset for years before 2012. It was used for harmonizing the GLD variable "subnatid2".| [LFS Coding Scheme pre-2012](utilities/Additional%20Data/LFS%20Coding%20Scheme%202010-11.pdf)|    
-| [PAK_city_code_2012](utilities/Additional%20Data/PAK_city_code_2012.dta)  | A code list containing four-digit codes and names of districts covered in the raw dataset for 2012. It was used for harmonizing the GLD variable "subnatid2".|[LFS Coding Scheme 2012](utilities/Additional%20Data/LFS%20CODE%202012-13.pdf)|
-| [PAK_city_code_2013](utilities/Additional%20Data/PAK_city_code_2013.dta)  | A code list containing four-digit codes and names of districts covered in the raw dataset for 2013. It was used for harmonizing the GLD variable "subnatid2".|[LFS Coding Scheme 2013](utilities/Additional%20Data/LFS%20CODE%202012-13.pdf)|   
-| [PAK_city_code_2014](utilities/Additional%20Data/PAK_city_code_2014.dta)  | A code list containing four-digit codes, names, and urban status of districts covered in the raw dataset for 2014. It was used for harmonizing the GLD variable "subnatid2".|[LFS Coding Scheme 2014](utilities/Additional%20Data/LFS%20Coding%202014-15.pdf)|    
-| [PAK_country_code_2020](utilities/Additional%20Data/PAK_country_code_2020.dta)  | A code list containing names, Pakistan's national four-digit codes and their corresponding three-letter ISO codes of countries from which respondents migrated in the raw dataset for 2020. It was used for harmonizing the GLD variable "migrated_from_country".|[District & Country](utilities/Additional%20Data/District_and_Country_Codes.pdf)|
-| [PAK_migration_code_2020](utilities/Additional%20Data/PAK_migration_code_2020.dta)  | A code list containing names and codes of districts or countries from which respondents migrated in the raw dataset for 2020. The districts in this dataset were used for harmonizing the GLD variable "migrated_from_code".|[District](utilities/Additional%20Data/Coding_Scheme_LFS_2020-21_Districts_Codes.pdf)|
-| [PAK_training_code](utilities/Additional%20Data/PAK_training_code.dta)  | A code list containing the codes and names of the type of vocational training. It was used for harmonizing GLD variable "vocational_field_orig" for years 2009-2018.|[Training pre-2020](utilities/Additional%20Data/MANUAL%202018-19.pdf)|
-| [PAK_training_code_2020](utilities/Additional%20Data/PAK_training_code_2020.dta) | A code list containing the codes and names of the type of vocational training. It was used for harmonizing GLD variable "vocational_field_orig" for 2020.|[Training 2020](utilities/Additional%20Data/List_of_Technical_Vocational_Training_Courses.pdf)|    
-| [PAK_subnatid2_code_2020](utilities/Additional%20Data/PAK_subnatid2_code_2020.dta)  |A code list containing three-digit codes and names of districts covered in the raw dataset for 2020. It was used for harmonizing the GLD variable "subnatid2".|[District](utilities/Additional%20Data/Coding_Scheme_LFS_2020-21_Districts_Codes.pdf)|
+| [ETH_zone_naming_1999](utilities/Additional%20Data/ETH_zone_naming_1999.dta) | A code list containing four-digit codes, names, and urban status of districts covered in the raw dataset for years before 2012. It was used for harmonizing the GLD variable "subnatid2".| [LFS Coding Scheme pre-2012](utilities/Additional%20Data/LFS%20Coding%20Scheme%202010-11.pdf)|    
+| [ETH_zone_naming_2005](utilities/Additional%20Data/ETH_zone_naming_2005.dta)  | A code list containing four-digit codes and names of districts covered in the raw dataset for 2012. It was used for harmonizing the GLD variable "subnatid2".|[LFS Coding Scheme 2012](utilities/Additional%20Data/LFS%20CODE%202012-13.pdf)|
+| [ETH_zone_naming_2013](utilities/Additional%20Data/ETH_zone_naming_2013.dta)  | A code list containing four-digit codes and names of districts covered in the raw dataset for 2013. It was used for harmonizing the GLD variable "subnatid2".|[LFS Coding Scheme 2013](utilities/Additional%20Data/LFS%20CODE%202012-13.pdf)|   
+| [ETH_zone_naming_2021](utilities/Additional%20Data/ETH_zone_naming_2021.dta)  | A code list containing four-digit codes, names, and urban status of districts covered in the raw dataset for 2014. It was used for harmonizing the GLD variable "subnatid2".|[LFS Coding Scheme 2014](utilities/Additional%20Data/LFS%20Coding%202014-15.pdf)|    
+| [ETH_wereda_naming_2021](utilities/Additional%20Data/ETH_wereda_naming_2021.dta)  | A code list containing four-digit codes, names, and urban status of districts covered in the raw dataset for 2014. It was used for harmonizing the GLD variable "subnatid2".|[LFS Coding Scheme 2014](utilities/Additional%20Data/LFS%20Coding%202014-15.pdf)|
