Update 1. Introduction to Ethiopian LFS.md

--- a/Support/B - Country Survey Details/ETH/LFS/1. Introduction to Ethiopian LFS.md
+++ b/Support/B - Country Survey Details/ETH/LFS/1. Introduction to Ethiopian LFS.md
@@ -81,8 +81,8 @@ We created several codelist for `subnatid2` and `subnatid3` according to CSA's c
 
 | **Document**	| **Description**	| **Referrence**|
 | :---------:	| :-------------: | :-----------: |   
-| [ETH_zone_naming_1999](utilities/Additional%20Data/ETH_zone_naming_1999.dta) | A code list containing four-digit codes, names, and urban status of districts covered in the raw dataset for years before 2012. It was used for harmonizing the GLD variable "subnatid2".| [LFS Coding Scheme pre-2012](utilities/Additional%20Data/LFS%20Coding%20Scheme%202010-11.pdf)|    
-| [ETH_zone_naming_2005](utilities/Additional%20Data/ETH_zone_naming_2005.dta)  | A code list containing four-digit codes and names of districts covered in the raw dataset for 2012. It was used for harmonizing the GLD variable "subnatid2".|[LFS Coding Scheme 2012](utilities/Additional%20Data/LFS%20CODE%202012-13.pdf)|
-| [ETH_zone_naming_2013](utilities/Additional%20Data/ETH_zone_naming_2013.dta)  | A code list containing four-digit codes and names of districts covered in the raw dataset for 2013. It was used for harmonizing the GLD variable "subnatid2".|[LFS Coding Scheme 2013](utilities/Additional%20Data/LFS%20CODE%202012-13.pdf)|   
-| [ETH_zone_naming_2021](utilities/Additional%20Data/ETH_zone_naming_2021.dta)  | A code list containing four-digit codes, names, and urban status of districts covered in the raw dataset for 2014. It was used for harmonizing the GLD variable "subnatid2".|[LFS Coding Scheme 2014](utilities/Additional%20Data/LFS%20Coding%202014-15.pdf)|    
-| [ETH_wereda_naming_2021](utilities/Additional%20Data/ETH_wereda_naming_2021.dta)  | A code list containing four-digit codes, names, and urban status of districts covered in the raw dataset for 2014. It was used for harmonizing the GLD variable "subnatid2".|[LFS Coding Scheme 2014](utilities/Additional%20Data/LFS%20Coding%202014-15.pdf)|
+| [ETH_zone_naming_1999](utilities/Additional%20Data/ETH_zone_naming_1999.dta) | A code list containing four-digit codes, names, and urban status of districts covered in the raw dataset for years before 2012. It was used for harmonizing the GLD variable "subnatid2".| [LFS Annual Report 1999](utilities/ETH_1999_LFS_report)|    
+| [ETH_zone_naming_2005](utilities/Additional%20Data/ETH_zone_naming_2005.dta)  | A code list containing four-digit codes and names of districts covered in the raw dataset for 2012. It was used for harmonizing the GLD variable "subnatid2".|[LFS Rural Codebook 2005](utilities/2005LFS_Rural_Codebook.pdf), [LFS Urban Codebook 2005](utilities/2005LFS_Urban_Codebook.pdf) |
+| [ETH_zone_naming_2013](utilities/Additional%20Data/ETH_zone_naming_2013.dta)  | A code list containing four-digit codes and names of districts covered in the raw dataset for 2013. It was used for harmonizing the GLD variable "subnatid2".|[LFS Annual Report 2013](utilities/nlfs_analytical_report_labor_force_2013.pdf)|   
+| [ETH_zone_naming_2021](utilities/Additional%20Data/ETH_zone_naming_2021.dta)  | A code list containing four-digit codes, names, and urban status of districts covered in the raw dataset for 2014. It was used for harmonizing the GLD variable "subnatid2".|[LFS Codebook 2021](utilities/CODEBOOK_2021_LMS.xlsx)|    
+| [ETH_wereda_naming_2021](utilities/Additional%20Data/ETH_wereda_naming_2021.dta)  | A code list containing four-digit codes, names, and urban status of districts covered in the raw dataset for 2014. It was used for harmonizing the GLD variable "subnatid2".|[LFS Codebook 2021](utilities/CODEBOOK_2021_LMS.xlsx)|
