--- a/Support/B - Country Survey Details/TUR/HLFS/1. Introduction to HLFS.md
+++ b/Support/B - Country Survey Details/TUR/HLFS/1. Introduction to HLFS.md
@@ -1,4 +1,4 @@
-# Introduction to the Turkish Household and Labour Force Survey (HLFS)
+correspondence# Introduction to the Turkish Household and Labour Force Survey (HLFS)
 
 - [What is the TUR HLFS](#what-is-the-tur-hlfs)
 - [What does the TUR HLFS cover?](#what-does-the-tur-hlfs-cover)
@@ -10,7 +10,7 @@
 
 ## What is the TUR HLFS?
 
-The Turkish HLFS is implemented regularly since 1988  and it provides information about employment, economic activity, occupation, employment status, working hours, and unemployment in Turkiye. 
+The Turkish HLFS is implemented regularly since 1988  and it provides information about employment, economic activity, occupation, employment status, working hours, and unemployment in Türkiye.
 
 ## What does the TUR HLFS cover?
 
@@ -47,11 +47,11 @@ The datasets are not available to the public, the researcher/analyst has to purc
 
 The LFS is designed as a two-stage stratified cluster sampling survey. The sampling frame is based on a nationwide address database with households as the ultimate sampling unit. Note however, that the sampling frame is updated over the years and there are slight changes to the methodology over time. For example, from 2004 the sampling allowed for subnational estimates. For further details please see the Turkish NSO [site](https://www.tuik.gov.tr/).
 
-Note: Information on methodology is only available from 2011 onwards. The presse releases are the best source of documentation of the sampling and weighting processess for each year. These can be accessed through the following [link](https://data.tuik.gov.tr/Kategori/GetKategori?p=istihdam-issizlik-ve-ucret-108&dil=2). In addition, the NSO prepared an overview of the process that is worth [revising](/Support/B%20-%20Country%20Survey%20Details/TUR/HLFS/Utilities/Presentation_TUIK.pdf) to understand the method and surveying process. 
+Note: Information on methodology is only available from 2011 onwards. The press releases are the best source of documentation of the sampling and weighting processess for each year. These can be accessed through the following [link](https://data.tuik.gov.tr/Kategori/GetKategori?p=istihdam-issizlik-ve-ucret-108&dil=2). In addition, the NSO prepared an overview of the process that is worth [revising](/Support/B%20-%20Country%20Survey%20Details/TUR/HLFS/Utilities/Presentation_TUIK.pdf) to understand the method and surveying process.
 
 ## What is the geographic significance level?
 
-The data for the years up to 2003 is only representative at the national (urban and rural) level, while data from 2004 onwards is representative at the NUTS-2 level. Note that the NUTS-3 level corresponds to the provinces, the first administrative disaggregation level of the Turkish state. More on [NUTS in Turkiye here](https://en.wikipedia.org/wiki/NUTS_statistical_regions_of_Turkey)
+The data for the years up to 2003 is only representative at the national (urban and rural) level, while data from 2004 onwards is representative at the NUTS-2 level. Note that the NUTS-3 level corresponds to the provinces, the first administrative disaggregation level of the Turkish state. More on [NUTS in Türkiye here](https://en.wikipedia.org/wiki/NUTS_statistical_regions_of_Turkey)
 
 
 ## Other noteworthy aspects
@@ -64,17 +64,17 @@ The raw datasets come with ID information masked due to privacy reasons. In the 
 
 TURKSTAT developed the 2000-2013 surveys with a variable for urban, rural categories. However, the 2014-2019 survey do not have a variable for urbanization categories. Further information about this change can be accessed in the press releases from 2014-onwards.
 
-### Education 
+### Education
 
-The education section of the harmonized dataset was developed using the NSO raw dataset. However, in the harmonization process, the team noted that the education levels changed between 2000 and 2014. The changes in the education system affected the code used in the GLD harmonization process, as a result, the team decided to create a separate page to explain the peculiarities of the education section and the decisions made by the team that resulted in the variables of the harmonized dataset. Please, use the following [link](/Support/B%20-%20Country%20Survey%20Details/TUR/HLFS/education.md) to get more details.
+The education section of the harmonized dataset was developed using the NSO raw dataset. However, in the harmonization process, the team noted that the education levels changed between 2000 and 2014. The changes in the education system affected the code used in the GLD harmonization process, as a result, the team decided to create a separate page to explain the peculiarities of the education section and the decisions made by the team that resulted in the variables of the harmonized dataset. Please, use the following [link](/Support/B%20-%20Country%20Survey%20Details/TUR/HLFS/Education.md) to get more details.
 
 ### Occupation Classification
 
-The TUR HLFS occupation data followed the coding from the international classification for occupations i.e., isco-68, isco-88 and isco-08. Though variations between years happened, all the changed followed the correspondance to the international coding classification. The harmonization team prepared a separate [page](/Support/B%20-%20Country%20Survey%20Details/TUR/HLFS/correspondance%20ISCO.md) that dives deeper into the changes for the case of Turkiye and the resulting limitations to consider while using the harmonized dataset. 
+The TUR HLFS occupation data followed the coding from the international classification for occupations i.e., isco-68, isco-88 and isco-08. Though variations between years happened, all the changed followed the correspondence to the international coding classification. The harmonization team prepared a separate [page](/Support/B%20-%20Country%20Survey%20Details/TUR/HLFS/Correspondence%20ISCO.md) that dives deeper into the changes for the case of Türkiye and the resulting limitations to consider while using the harmonized dataset.
 
 ### Industry Classification
 
-The TUR HLFS industry data follow the NACE or the European industry classification starting 2004. Previous to that, the NSO used the ISIC revision 3 to code the industry activities. Further details on the significance of this shift, resulting logic used in the harmonized dataset and the limitation can be found in the following [link](/Support/B%20-%20Country%20Survey%20Details/TUR/HLFS/Correspondance%20ISIC.md). 
+The TUR HLFS industry data follow the NACE or the European industry classification starting 2004. Previous to that, the NSO used the ISIC revision 3 to code the industry activities. Further details on the significance of this shift, resulting logic used in the harmonized dataset and the limitation can be found in the following [link](/Support/B%20-%20Country%20Survey%20Details/TUR/HLFS/Correspondence%20ISIC.md).
 
-### Other Documentation Files 
-The yearly HLFS has changed methodology since 2020. Though the do files do not cover the 2020 HLFS, users may find useful the basis for the change of methodology. Interested persons can access the information in the following [link](https://www.tuik.gov.tr/indir/metodolojikDokumanlar/hia_metod_en.pdf). 
+### Other Documentation Files
+The yearly HLFS has changed methodology since 2020. Though the do files do not cover the 2020 HLFS, users may find useful the basis for the change of methodology. Interested persons can access the information in the following [link](https://www.tuik.gov.tr/indir/metodolojikDokumanlar/hia_metod_en.pdf).
