Update 1. Introduction to Ethiopian LFS.md

--- a/Support/B - Country Survey Details/ETH/LFS/1. Introduction to Ethiopian LFS.md
+++ b/Support/B - Country Survey Details/ETH/LFS/1. Introduction to Ethiopian LFS.md
@@ -86,4 +86,4 @@ We created several codelist for `subnatid2` and `subnatid3` according to CSA's c
 | [ETH_zone_naming_2013](utilities/Additional%20Data/ETH_zone_naming_2013.dta)  | A code list containing the codes and names of Ethiopia's second-level administrative division, zone. It was used for harmonizing the GLD variable "subnatid2" for 2013.|[LFS Annual Report 2013](utilities/nlfs_analytical_report_labor_force_2013.pdf)|   
 | [ETH_zone_naming_2021](utilities/Additional%20Data/ETH_zone_naming_2021.dta)  | A code list containing the codes and names of Ethiopia's second-level administrative division, zone. It was used for harmonizing the GLD variable "subnatid2" for 2021. In addition to zones, it also contains codes and names of regions.|[LFS Codebook 2021](utilities/CODEBOOK_2021_LMS.xlsx)|    
 | [ETH_wereda_naming_2021](utilities/Additional%20Data/ETH_wereda_naming_2021.dta)  | A code list containing the codes and names of Ethiopia's third-level administrative division, wereda. It was used for harmonizing the GLD variable "subnatid3" for 2021. In addition to weredas, it also contains codes and names of zones and names of regions.|[LFS Codebook 2021](utilities/CODEBOOK_2021_LMS.xlsx)|
-| [ETH_2021_occup_isco](utilities/Additional%20Data/ETH_2021_occup_isco.dta)  | A code list containing the four-digit original occupation codes,`code_o`, and the harmonized four-digit codes, `code_h`. "Drop" means coding the original codes to missing values. |N/A|
+| [ETH_2021_occup_isco](utilities/Additional%20Data/ETH_2021_occup_isco.dta)  | A code list containing the four-digit original occupation codes,`code_o`, and the harmonized four-digit codes, `code_h`. "Drop" means coding the original codes to missing values. This files was used for coding `occup_isco`. |N/A|
