Introduce section on currency changes
Data includes changes in the currency, high inflation.

Made a section in  the intro to introduce this.

Made a specific section detailing the issue.

--- a/Support/B - Country Survey Details/BRA/PNAD/1. Introduction to PNAD.md
+++ b/Support/B - Country Survey Details/BRA/PNAD/1. Introduction to PNAD.md
@@ -87,9 +87,14 @@ There are also a few differences in the concept of labor and minimum age from wh
 
 Another important difference is related to the years of study. The National Constitution of 1988 determined the universalization of the right to basic, compulsory and free education, initially from seven to seventeen years old. In 1996, this right was expanded to 6 years old – although in the early years it was not universally observed –, with enrollment at this age taking place in the so-called “literacy grade”, which was not considered a year of study by the IBGE. However, in 2006, compulsory elementary education was established to last 9 years, starting at 6 years of age, incorporating, in practice, the “literacy grade”. The PNADC, therefore, starts to consider this first year as a year of study.
 
+### Changes in the currency of record
+
+The answers recorded for the wages of employees in the PNAD (and PNAD-C) surveys are in the currency of legal tender at the moment of the survey. In most situations this is not noteworthy, yet for the PNAD data of the 1980’s and early 1990’s it is relevant as the country underwent a number of currency changes, each changing significantly the nominal value of the reported income. The detailed explanation and a proposal of how to unify the data is provided [here in a separate document](Currency%20changes%20during%PNAD.md)
+
+
 ### Coding of industry and occupation codes
 
-The PNAD codes occupation is based on the Brazilian National Occupation classification (CBO) and industry based on the National Industry classification (CNAE). Different survey editions use different iterations of the CBO and CNAE, which in turn lead to different mappings to the International Standard Classification of Occupations (ISCO) and International Standard Industrial Classification (ISIC). The details on the process of creating the correspondence between national and international classifications are covered [here in a separate document for industry classfications](Correspondence%20between%20PNAD%20industry%20classification%20and%20ISIC.md). and [here for occupation classifications](Correspondence%20between%20PNAD%20occupation%20classification%20and%20ISCO.md). 
+The PNAD codes occupation is based on the Brazilian National Occupation classification (CBO) and industry based on the National Industry classification (CNAE). Different survey editions use different iterations of the CBO and CNAE, which in turn lead to different mappings to the International Standard Classification of Occupations (ISCO) and International Standard Industrial Classification (ISIC). The details on the process of creating the correspondence between national and international classifications are covered [here in a separate document for industry classfications](Correspondence%20between%20PNAD%20industry%20classification%20and%20ISIC.md). and [here for occupation classifications](Correspondence%20between%20PNAD%20occupation%20classification%20and%20ISCO.md).
 
 The tables below show the overview of the underlying version of the national classification and what version of the international they have been matched to.
 
@@ -107,4 +112,3 @@ The tables below show the overview of the underlying version of the national cla
 |-----------|---------------------------------|--------|------------------------------------|--------------------|-----------------------|--------------|
 | 1981/2001 | CNAE 1980/1991                  | PNAD   | CNAE-DOM 1.0                       | Two Digits         | Isic rev 3            | Two Digits   |
 | 2002/2011 | CNAE-DOM 1.0                    | PNAD   | --------                           | Two Digits         | Isic rev 3            | Two Digits   |
-
