Update link to specific currency doc

--- a/Support/B - Country Survey Details/BRA/PNAD/1. Introduction to PNAD.md
+++ b/Support/B - Country Survey Details/BRA/PNAD/1. Introduction to PNAD.md
@@ -89,7 +89,7 @@ Another important difference is related to the years of study. The National Cons
 
 ### Changes in the currency of record
 
-The answers recorded for the wages of employees in the PNAD (and PNAD-C) surveys are in the currency of legal tender at the moment of the survey. In most situations this is not noteworthy, yet for the PNAD data of the 1980’s and early 1990’s it is relevant as the country underwent a number of currency changes, each changing significantly the nominal value of the reported income. The detailed explanation and a proposal of how to unify the data is provided [here in a separate document](Currency%20changes%20during%PNAD.md)
+The answers recorded for the wages of employees in the PNAD (and PNAD-C) surveys are in the currency of legal tender at the moment of the survey. In most situations this is not noteworthy, yet for the PNAD data of the 1980’s and early 1990’s it is relevant as the country underwent a number of currency changes, each changing significantly the nominal value of the reported income. The detailed explanation and a proposal of how to unify the data is provided [here in a separate document](Currency%20changes%20during%20PNAD.md)
 
 
 ### Coding of industry and occupation codes
