--- a/Support/B - Country Survey Details/ZAF/QLFS/1. Introduction to QLFS.md
+++ b/Support/B - Country Survey Details/ZAF/QLFS/1. Introduction to QLFS.md
@@ -121,13 +121,13 @@ South Africa has 6 metro cities before 2011 and the country added 2 metros, *Buf
 |       16        |          \-          |  *Mpumalanga, Non-Metro*   |
 |       17        |          \-          |    *Limpopo, Non-Metro*    |
 
-### Coding of sector 
+### Coding of sector
 
 The original variable `Geo_type` in the QLFS is not an urban-or-rural binary variable. Moreover, it varies over years. As shown in the table below, from 2008 to 2015, `Geo_type` contains urban formal, urban informal, tribal areas, and rural formal. But since 2016, it has urban, traditional, and farm/mining areas.
 
 We referred to the published statistics of urban population (% of total population) of South Africa from [World Bank Open Data](https://data.worldbank.org/indicator/SP.URB.TOTL.IN.ZS?end=2020&locations=ZA&start=2007) to decide the way of sector's harmonization. The original categories are re-grouped in such way that each year's result match World Bank's statistics correspondingly as close as possible.
 
-|**Year**|                     **Original geo-type code**                    | **Re-categorization**         | 
+|**Year**|                     **Original geo-type code**                    | **Re-categorization**         |
 |:---:|:--------------------------------------------------------------------:|:-----------------------------:|
 |2008| 1=Urban formal 2=Urban informal   4=Tribal areas 5=Rural formal       |     (1 2)=urban (4 5)=rural   |
 |2009| 1=Urban formal 2=Urban informal   4=Tribal areas 5=Rural formal       |     (1 2)=urban (4 5)=rural   |
@@ -151,6 +151,12 @@ The QLFS of all years codes industry based on the [Standard Industrial Classific
 
 Regarding occupational classification, all QLFS years code occupation based on [South African Standard Classification of Occupations published in 2003 (SASCO 2003)](http://www.statssa.gov.za/classifications/codelists/SASCO_2003.pdf), which is based on the United Nations' International Standard Classification of Occupations (ISCO-88). The details on the process of creating the correspondence between national and international classifications [are covered here in a separate document](/Support/B%20-%20Country%20Survey%20Details/ZAF/QLFS/Correspondence_National_International_Classifications.md).
 
+### Coding of education categories
+
+The education categories used in the questionnaire (and recorded in the GLD variable `educat_orig`) changed in 2012 so that codes are not directly comparable at that level. In addition, the education coding for 2012 is unequal to all other years. The results for 2012 are not used by the ILO and neither coded into GLD. Finally, there is a small difference in the understanding of one particular education, treated as tertiary education by Stats SA but not by GLD (or ILO).
+
+The exact details are explained in [this separate document](Education_codes_changes.md)
+
 ### Assembling annual data using QLFS and LMDSA
 
 As stated at the beginning, data is available freely on the [Data First website](https://www.datafirst.uct.ac.za/dataportal/index.php/catalog/StatsSA) as quarterly release (Quarterly Labour Force Survey - QLFS) and as a single, year-round data set (the Labour Market Dynamics in South Africa, LMDSA, file). All variables and observations remain the same in LMDSA except that the variable of weight is divided by four in LMDSA.
@@ -164,4 +170,4 @@ Moreover, years 2012 and 2016 need special attention. Using LMDSA alone for thes
 Note that the QLFS since March 2020 has switched from face-to-face interview to Computer Assisted Telephone Interviewing (CATI). Accordingly, sample size was affected by the availability of contacts of the dwelling units. Therefore, according to the QLFS Q2 report, it is recommended to cautiously make comparisons with previous quarters. More details about quarterly data collection in 2020 below from a screenshot of 2020 Q2 report:
 
 ![QLFS_2020_Q2_report.](utilities/QLFS_2020_Q2_report.png)
-### 
+###
