--- a/Support/B - Country Survey Details/RWA/LFS/1. Introduction to RWA LFS.md
+++ b/Support/B - Country Survey Details/RWA/LFS/1. Introduction to RWA LFS.md
@@ -14,71 +14,61 @@
 
 ## What is the RWA LFS?
 
-The Rwanda LFS has been conducted by the National Institute of Statistics of Rwanda since August 2016.  It is a quarterly survey that provides information on household roster characteristics, education, employment, primary and secondary economic activities in the past week, previous employment, own-use production of goods and services, and household assets. The questionnaire is based on the framework set by the 19th International Conference of Labor Statistics ("ICLS-19").
+The Rwanda LFS has been conducted by the National Institute of Statistics of Rwanda since August 2016. The questionnaire is based on the framework set by the 19th International Conference of Labor Statistics ("ICLS-19"). Information was collected on household roster characteristics, education, employment, primary and secondary economic activities in the past week, previous employment, own-use production of goods and services, and household assets.  Before 2019, it was a bi-annual survey conducted on February and August of the same year to capture seasonal changes in agriculture. Since then, it was rolled out as a quarterly survey that included additional rounds for May and November. Despite these changes, the questionnaire was unchanged with the exception of the May 2020 round where an abridged version was used.
 
-## What does the THA LFS cover?
+## What does the RWA LFS cover?
 
 The Rwanda LFS is a labor force survey with information on demographic characteristics, education, and labor market activities over the past 7 days. The harmonized years and sample sizes used in the GLD harmonization are as follows:
 
-**Individual counts**
-
-**Household counts**
+| Year | HH count | Individual count |
+|---|---|---|
+| 2017 |          17,938  |                      77,761  |
+| 2018 |          17,861  |                      76,670  |
+| 2019 |          19,325  |                      81,778  |
+| 2020 |          16,718  |                      70,172  |
+| 2021 |          17,085  |                      71,947  |
 
 
 ## Where can the data be found?
 
-The datasets are accessible to the public and researchers have to detail their purposes of using data to the [Rwanda National Institute of Statistics](https://microdata.statistics.gov.rw/index.php/catalog). The World Bank has been granted access to the datasets, if you work or are part of the World Bank Group, kindly contact the Jobs Group with a formal request for access to gld@worldbank.org
+The datasets are accessible to the public and researchers have to detail their purposes of using data to the [Rwanda National Institute of Statistics](https://microdata.statistics.gov.rw/index.php/catalog). 
 
 ## What is the sampling procedure?
 
 The LFS is designed as a stratified two-stage sampling survey. All 30 districts of Rwanda, subdivided into urban and rural constitute the strata. The primary sampling units were selected with probability proportional to size from enumeration areas laid out in the 2012 Census sampling frame. There were 16 households sampled in each enumeration area (EA), except when there are fewer than 16 households living in the EA. 
 
-The Rwanda LFS uses a rotation sampling design that differs between the 2016-2018 and 2019-2021 rounds. In the 2016-18 rounds, the sample is split equally into four rotation groups where one group is replaced by a new one every round. Thus, on a round-to-round basis, 75% of the sample is retained. In the rounds starting February 2019, the design follows a 1-1-1 scheme such that each household is interviewed every other quarter. 
+The Rwanda LFS uses a rotation sampling design that differs between the 2016-2018 and 2019-2021 rounds. In the 2016-18 rounds, the sample is split equally into four rotation groups where one group is replaced by a new one every round. Thus, on a round-to-round basis, 75% of the sample is retained. In the rounds starting February 2019, the design follows a 1-1-1 scheme such that each household is interviewed every other quarter three times before being replaced with a new sampling group.
 
 ## What is the significance level?
 
-The official reports detail results by gender, area of residence (urban or rural), and region. However, between 1985 and 1997, the data is designed to generate national level estimates.
+The selected weight variable in the harmonized datasets is meant to generate annual estimates at the district level. 
 
 ## Other noteworthy aspects
 
 ### Household ID
 
-The datasets received contain ID information. In the GLD project, we have created IDs to provide the best user experience based on geographic identifiers. The household ID is formed based on information on region, province, area of residence or sector, district, village block number, and household number. 
+The datasets received contain ID information. In the GLD project, we have created IDs to provide the best user experience based on geographic identifiers. The household ID is formed based on information on the primary sampling unit and household identifier. 
 
-### Geographic Information
+### Discrepancies between the questionnaire and variables in the raw datasets
 
-In 2001, the Thailand LFS changed the area of residence categories to urban and rural. Prior to that, areas of residence are categorized as municipal, non-municipal and sanitary areas. In the GLD harmonization, urban areas are mapped to municipal areas, while rural areas are mapped to non-municipal and sanitary areas. More details in a [separate document here](Geographic%20codes.md)
+### Minimum age for education and labor questions
+
+Education and labor questions were asked only for respondents aged 14 and above. In contrast, the Rwanda NIS reports employment indicators for individuals aged 16 and above. Rwanda labor laws require that only individuals can only begin employment at the age of 16 but permitted apprenticeships for those between 13 and 15 years old.
+
+### Adjustments during the pandemic
 
 
-### Minimum age for education, migration and employment questions
 
-Since 2001, the education and employment questions are asked only for respondents aged 15 and above. Between 1995 and 2000, the questions (including those for migration module) are asked for 13 and above. Between 1985 and 1994, the employment and migration questions are asked for 11 and above. Meanwhile, the education questions are asked for 11 and above only between 1988 and 1994, and before then, it applied to ages 7 and above.
-
-### Frequency of surveys and its impact on questionnaire design
-
-There have been changes over time in terms of the frequency of the survey rounds. Between 1984 and 1997, there survey is conducted three times a year. The first round used to be conducted in February to coincide with the non-agricultural season. The second round was normally conducted in May to account for the labor force entrants coming from the newly graduated students. The third round was normally held in August during the Agricultural season. Between 1998 and 2001, the Thailand LFS began to conduct the survey quarterly. And from 2001 onwards, the survey was conducted monthly.
-
-In the years when LFS only had 3 rounds, there is a shorter set of questions asked in the second round. Questions not asked in the second round include: (a) income/wage received, (b) the frequency at which the income/wage is received, (c) province and area of migration, (d) reasons for migration, (e) size of establishment in terms of number of employees, and (f) presence of labor union in the place of employment. 
-
-### Missing rounds
-
-This is to note that there are no harmonized LFS datasets for all quarters of 2013 and the 4th quarter of 2012 as we are not able to uniquely identify the observations given the various combinations of the sampling variables available in the dataset. 
-
-### Migration
-
-Questions relating to migration were asked only until 2000. Information was available on individual’s previous area and province of residence, and reason for migration. However, the questions were only asked in the first and third rounds of the surveys. 
-
-### Differences in defining unemployment
+### Differences in defining unemployment -- KEEP THIS
 
 The Thailand NSO reports unemployment to include individuals that are either seeking work or available for work. In contrast, the GLD defines the unemployed as those who are seeking and available for work. More details in a [separate document here](Labor%20force%20status.md)
 
 ### Employment: Industry Classification
 
-The Thailand LFS follows the ISIC version 1 between 1985 and 2000, and the ISIC version 3 between 2001 and 2010. The LFS began using the Thailand Standard Industrial Classification of All Economic Activities (TSIC) 2009 in the 2011 survey. The NSO published a correspondence table that will allow the conversion of TSIC 2009 codes into ISIC version 3. More details in a [separate document here](Changes%20in%20industry%20and%20occupation.md)
+The Rwanda LFS follows a customized version of the ISIC version 4 called CISIC (see [here]()). However, there were codes that cannot be found in both the CISIC and ISIC version 4. The closest digit available was used when coding ISIC correspondence. For example, industry code "5111" was mapped to "5100" since no valid ISIC code can be found for the 3-digit equivalent, "5110". 
 
 ### Employment: Occupation Classification
 
-The Thailand LFS occupation data followed the coding from the international classification for occupations, i.e., ISCO 1958, ISCO 1988 and ISCO 2008. More details in a [separate document here](Changes%20in%20industry%20and%20occupation.md)
-
+The Rwanda LFS follows a customized version of the ISCO 2008 called CISCO (see [here]()). However, there were codes that cannot be found in both the CISCO and ISCO 2008. The closest digit available was used when coding ISCO correspondence. For example, occupation code "2213" was mapped to "2200" since no valid ISCO code can be found for the 3-digit equivalent, "2210". 
 
 
