--- a/Support/B - Country Survey Details/RWA/LFS/1. Introduction to RWA LFS.md
+++ b/Support/B - Country Survey Details/RWA/LFS/1. Introduction to RWA LFS.md
@@ -14,7 +14,7 @@
 
 ## What is the RWA LFS?
 
-The Rwanda LFS has been conducted by the National Institute of Statistics of Rwanda since August 2016. The questionnaire is based on the framework set by the 19th International Conference of Labor Statistics ("ICLS-19"). Information was collected on household roster characteristics, education, employment, primary and secondary economic activities in the past week, previous employment, own-use production of goods and services, and household assets.  Before 2019, it was a bi-annual survey conducted on February and August of the same year to capture seasonal changes in agriculture. Since then, it was rolled out as a quarterly survey that included additional rounds for May and November. Despite these changes, the questionnaire was unchanged with the exception of the May 2020 round where an abridged version was used.
+The Rwanda LFS has been conducted by the National Institute of Statistics of Rwanda since August 2016. Adopting the framework set by the 19th International Conference of Labor Statistics ("ICLS-19"), the questionnaire is aimed to gather information on household roster characteristics, education, employment, primary and secondary economic activities in the past week, previous employment, own-use production of goods and services, and household assets.  Before 2019, it was a bi-annual survey conducted on February and August of the same year to capture seasonal changes in agriculture. Since then, it was rolled out as a quarterly survey that included additional rounds for May and November. Despite these changes, the questionnaire was unchanged with the exception of the May 2020 round where an abridged version was used.
 
 ## What does the RWA LFS cover?
 
@@ -31,17 +31,17 @@ The Rwanda LFS is a labor force survey with information on demographic character
 
 ## Where can the data be found?
 
-The datasets are accessible to the public and researchers have to detail their purposes of using data to the [Rwanda National Institute of Statistics](https://microdata.statistics.gov.rw/index.php/catalog). 
+The datasets are accessible to the public and researchers have to detail their purposes of using data to the [Rwanda National Institute of Statistics (NIS)](https://microdata.statistics.gov.rw/index.php/catalog). 
 
 ## What is the sampling procedure?
 
-The LFS is designed as a stratified two-stage sampling survey. All 30 districts of Rwanda, subdivided into urban and rural constitute the strata. The primary sampling units were selected with probability proportional to size from enumeration areas laid out in the 2012 Census sampling frame. There were 16 households sampled in each enumeration area (EA), except when there are fewer than 16 households living in the EA. 
+The Rwanda LFS is designed as a stratified two-stage sampling survey. All 30 districts of Rwanda, subdivided into urban and rural constitute the strata. The primary sampling units were selected with probability proportional to size from enumeration areas laid out in the 2012 Census sampling frame. There were 16 households sampled in each enumeration area (EA), except when there are fewer than 16 households living in the EA. 
 
 The Rwanda LFS uses a rotation sampling design that differs between the 2016-2018 and 2019-2021 rounds. In the 2016-18 rounds, the sample is split equally into four rotation groups where one group is replaced by a new one every round. Thus, on a round-to-round basis, 75% of the sample is retained. In the rounds starting February 2019, the design follows a 1-1-1 scheme such that each household is interviewed every other quarter three times before being replaced with a new sampling group.
 
 ## What is the significance level?
 
-The selected weight variable in the harmonized datasets is meant to generate annual estimates at the district level. 
+The harmonized datasets contain a weight variable that is meant to generate annual estimates at the district level. Quarterly level estimates can be made at the national level by replacing the do files with appropriate quarterly weight. Users can do this by following this guide. 
 
 ## Other noteworthy aspects
 
@@ -51,17 +51,15 @@ The datasets received contain ID information. In the GLD project, we have create
 
 ### Discrepancies between the questionnaire and variables in the raw datasets
 
+While the Rwanda LFS questionnaire remains largely unchanged over time, there were certain instances when the raw datasets do not contain the universe of variables implied by the questionnaire. These missing variables are detailed (here)[XXX].
+
 ### Minimum age for education and labor questions
 
-Education and labor questions were asked only for respondents aged 14 and above. In contrast, the Rwanda NIS reports employment indicators for individuals aged 16 and above. Rwanda labor laws require that only individuals can only begin employment at the age of 16 but permitted apprenticeships for those between 13 and 15 years old.
+Education and labor questions were asked only for respondents aged 14 and above. This differs from the Rwanda NIS reports, which reports employment indicators for individuals aged 16 and above. Rwanda labor laws require that only individuals can only begin employment at the age of 16 but permitted apprenticeships for those between 13 and 15 years old.  
 
-### Adjustments during the pandemic
+### Adjustments during the Covid-19 pandemic
 
-
-
-### Differences in defining unemployment -- KEEP THIS
-
-The Thailand NSO reports unemployment to include individuals that are either seeking work or available for work. In contrast, the GLD defines the unemployed as those who are seeking and available for work. More details in a [separate document here](Labor%20force%20status.md)
+There were adjustments made on the 2020 Rwanda LFS in response to the Covid-19 pandemic. For the May and November 2020 rounds, which comprise the same rotation sampling group, interviewers were done through phone. Also, an abridged version was used in the May 2020 round where only basic household information and labor status were collected. For this reason, the NIS recommended that full year estimates only be calculated for indicators available in the May round. 
 
 ### Employment: Industry Classification
 
