Update 1. Introduction to RWA LFS.md

--- a/Support/B - Country Survey Details/RWA/LFS/1. Introduction to RWA LFS.md
+++ b/Support/B - Country Survey Details/RWA/LFS/1. Introduction to RWA LFS.md
@@ -37,7 +37,7 @@ The datasets are accessible to the public and researchers have to detail their p
 
 The Rwanda LFS is designed as a stratified two-stage sampling survey. All 30 districts of Rwanda, subdivided into urban and rural constitute the strata. The primary sampling units were selected with probability proportional to size from enumeration areas laid out in the 2012 Census sampling frame. There were 16 households sampled in each enumeration area (EA), except when there are fewer than 16 households living in the EA. 
 
-The Rwanda LFS uses a rotation sampling design that differs between the 2016-2018 and 2019-2021 rounds. In the 2016-18 rounds, the sample is split equally into four rotation groups where one group is replaced by a new one every round. Thus, on a round-to-round basis, 75% of the sample is retained. In the rounds starting February 2019, the design follows a 1-1-1 scheme such that each household is interviewed every other quarter three times before being replaced with a new sampling group.
+The Rwanda LFS uses a rotation sampling design that differs between the 2016-2018 and 2019-2021 rounds. In the 2016-18 rounds, the sample is split equally into four rotation groups where one group is replaced by a new one every round. Thus, on a round-to-round basis, 75% of the sample is retained. In the rounds starting February 2019, the design follows a 1-1-1 scheme such that each household in a sampling group is interviewed every other quarter three times prior to replacement.
 
 ## What is the significance level?
 
