Update 1. Introduction to RWA LFS.md

--- a/Support/B - Country Survey Details/RWA/LFS/1. Introduction to RWA LFS.md
+++ b/Support/B - Country Survey Details/RWA/LFS/1. Introduction to RWA LFS.md
@@ -51,7 +51,7 @@ The datasets received contain ID information. In the GLD project, we have create
 
 ### Discrepancies between the questionnaire and variables in the raw datasets
 
-While the Rwanda LFS questionnaire remains largely unchanged over time, there were certain instances when the raw datasets do not contain the universe of variables implied by the questionnaire. These missing variables are detailed (here)[XXX].
+While the Rwanda LFS questionnaire remains largely unchanged over time, there were certain instances when the raw datasets do not contain the universe of variables implied by the questionnaire. These missing variables are detailed [here](Missing%20variables.md).
 
 ### Minimum age for education and labor questions
 
