Update 1. Introduction to RWA LFS.md

--- a/Support/B - Country Survey Details/RWA/LFS/1. Introduction to RWA LFS.md
+++ b/Support/B - Country Survey Details/RWA/LFS/1. Introduction to RWA LFS.md
@@ -59,7 +59,7 @@ Education and labor questions were asked only for respondents aged 14 and above.
 
 ### Adjustments during the Covid-19 pandemic
 
-There were adjustments made on the 2020 Rwanda LFS in response to the Covid-19 pandemic. For the May and November 2020 rounds, which comprise the same rotation sampling group, interviewers were done through phone. Also, an abridged version was used in the May 2020 round where only basic household information and labor status were collected. For this reason, the NIS recommended that full year estimates only be calculated for indicators available in the May round. 
+There were adjustments made in the 2020 Rwanda LFS in response to the Covid-19 pandemic. Phone interviews were done for the May and November 2020 rounds, both of which comprise the same sampling group. Also, an abridged version was used in the May 2020 round where only basic household information and labor status were collected. For this reason, the Rwanda NIS recommends that full year estimates only be calculated for the few indicators available in the May round. 
 
 ### Employment: Industry Classification
 
