--- a/Support/B - Country Survey Details/ETH/LFS/1. Introduction to Ethiopian LFS.md
+++ b/Support/B - Country Survey Details/ETH/LFS/1. Introduction to Ethiopian LFS.md
@@ -62,18 +62,22 @@ The official reports detailed results by gender, sector (i.e. urban or rural), a
 
 ### Coding of industry and occupation codes
 
-In general, so far we do not have information on the version of Ethiopia's National Occupation and Industry Classifications (NOIC). The full codebooks of NOIC and its history of change are unkown to us. The only version er know for sure is NOIC 1994 which is used for LFS 1999. The codebook of NOIC 1994 can be found [here.](utilities/ETH_national_mappings_1999.xlsx) 
+In general, so far we do not have information on the version of Ethiopia's National Occupation and Industry Classifications (NOIC). The full codebooks of NOIC and its history of change are unkown to us. The only version we know for sure is NOIC 1994 which is used for LFS 1999. The codebook of NOIC 1994 can be found [here.](utilities/ETH_national_mappings_1999.xlsx) 
 
-Even though the version information of NOIC is missing, we still managed to map the original industry and occupation variables in the raw datasets according to annual reports. The NOIC of LFS 2005 is based on ISIC Rev.3 and its ISCO counterpart is ISCO 88; whereas the ISIC and ISCO used for year 2013 and 2021 are ISIC Rev.4 and ISCO08. We followed the guide in ETH LFS annual reports and completed the mapping this way but we are still waiting for more detials of the NOIC version and labeling of each NOIC subcategories to double check the mapping. 
+Even though the version information of NOIC is missing, we still managed to map the original industry and occupation variables in the raw datasets according to annual reports. The NOIC of LFS 2005 is based on ISIC Rev.3 and its ISCO counterpart is ISCO 88; the ISIC and ISCO used for year 2013 and 2021 are ISIC Rev.4 and ISCO08 respectively. We followed the guide in ETH LFS annual reports and completed the mapping this way but we are still waiting for more detials of the NOIC version and labeling of each NOIC subcategories to double check the mapping. 
 
-- For year **1999**, we did not harmonize `indsutrycat_isic` since the original unlabled industry variable have too many unmatched categories with ISIC Rev.3. We harmonized `occup_isco` at two-digit level. 
+- For year **1999**, we did not harmonize `indsutrycat_isic` since the original unlabled industry variable have too many unmatched categories with ISIC Rev.3. We harmonized `occup_isco` at two-digit level.
 - For year **2005**, we mapped `industrycat_isic` at three-digit level and `occup_isco` at two-digit level.
 - For year **2013**, we mapped `industrycat_isic` at four-digit level with only few changes and `occup_isco` at two-digit level.
-- For year **2021**, we mapped both `industrycat_isic` and `occup_isco` at four-digit level with some changes to the codes. And here are the correspondence tables for [industry](utilities/industry_2021.xlsx) and [occupation](utilities/ISCO_2021_harmonization.xlsx).
+- For year **2021**, we mapped `industrycat_isic` at four-digit level and `occup_isco` at three-digit level.
+
+Some categories in NOIC could not be found in ISIC or ISCO due to adaptations to make NOIC reflect local economic characteristics. So we made some changes to the codes and more details about the correspondence are in this [separate document](Correspondence_National_International_Classifications.md).
 
 
 ### Mapping years of education
 
+Mapping educational achievement is tricky for Ethiopia, due to the convoluted categorization of the original education variables, especially in 2013 and 2021. In the last two years, the categories are mixed with old and new curriculums. With great help from our colleagues in Poverty & Equity group and Ethiopian Statistics Service (ESS), we were able to correctly complete the educational achievement harmonization for all years and the correspondence is covered in this [separate document](Educational_Achievement_Harmonization.md).   
+ 
 
 ### Helper files for region, zone and wereda naming
 
@@ -83,7 +87,4 @@ We created several codelist for `subnatid2` and `subnatid3` according to CSA's c
 | :---------:	| :-------------: | :-----------: |   
 | [ETH_zone_naming_1999](utilities/Additional%20Data/ETH_zone_naming_1999.dta) | A code list containing the codes and names of Ethiopia's second-level administrative division, zone. It was used for harmonizing the GLD variable "subnatid2" for 1999.| [LFS Annual Report 1999](utilities/ETH_1999_LFS_report)|    
 | [ETH_zone_naming_2005](utilities/Additional%20Data/ETH_zone_naming_2005.dta)  | A code list containing the codes and names of Ethiopia's second-level administrative division, zone. It was used for harmonizing the GLD variable "subnatid2" for 2005.|[LFS Rural Codebook 2005](utilities/2005LFS_Rural_Codebook.pdf), [LFS Urban Codebook 2005](utilities/2005LFS_Urban_Codebook.pdf) |
-| [ETH_zone_naming_2013](utilities/Additional%20Data/ETH_zone_naming_2013.dta)  | A code list containing the codes and names of Ethiopia's second-level administrative division, zone. It was used for harmonizing the GLD variable "subnatid2" for 2013.|[LFS Annual Report 2013](utilities/nlfs_analytical_report_labor_force_2013.pdf)|   
-| [ETH_zone_naming_2021](utilities/Additional%20Data/ETH_zone_naming_2021.dta)  | A code list containing the codes and names of Ethiopia's second-level administrative division, zone. It was used for harmonizing the GLD variable "subnatid2" for 2021. In addition to zones, it also contains codes and names of regions.|[LFS Codebook 2021](utilities/CODEBOOK_2021_LMS.xlsx)|    
-| [ETH_wereda_naming_2021](utilities/Additional%20Data/ETH_wereda_naming_2021.dta)  | A code list containing the codes and names of Ethiopia's third-level administrative division, wereda. It was used for harmonizing the GLD variable "subnatid3" for 2021. In addition to weredas, it also contains codes and names of zones and names of regions.|[LFS Codebook 2021](utilities/CODEBOOK_2021_LMS.xlsx)|
-| [ETH_2021_occup_isco](utilities/Additional%20Data/ETH_2021_occup_isco.dta)  | A code list containing the four-digit original occupation codes,`code_o`, and the harmonized four-digit codes, `code_h`. "Drop" means coding the original codes to missing values. This files was used for coding `occup_isco`. |N/A|
+| [ETH_subnatid_2021](utilities/Additional%20Data/ETH_2021_subnatid_codebook.dta)  | A comprehensive code list containing the codes and names of region, zone, wereda, town, kebele, and enumeration area in Ethiopia. It was used for harmonizing the GLD variable `subnatid2` and `subnatid3` for 2021.|[LFS Codebook 2021](utilities/CODEBOOK_2021_LMS.xlsx)|    
