--- a/Support/B - Country Survey Details/ETH/LFS/1. Introduction to Ethiopian LFS.md
+++ b/Support/B - Country Survey Details/ETH/LFS/1. Introduction to Ethiopian LFS.md
@@ -85,6 +85,6 @@ We created several codelist for `subnatid2` and `subnatid3` according to CSA's c
 
 | **Document**	| **Description**	| **Referrence**|
 | :---------:	| :-------------: | :-----------: |   
-| [ETH_zone_naming_1999](utilities/Additional%20Data/ETH_zone_naming_1999.dta) | A code list containing the codes and names of Ethiopia's second-level administrative division, zone. It was used for harmonizing the GLD variable "subnatid2" for 1999.| [LFS Annual Report 1999](utilities/ETH_1999_LFS_report)|    
+| [ETH_zone_naming_1999](utilities/Additional%20Data/ETH_zone_naming_1999.dta) | A code list containing the codes and names of Ethiopia's second-level administrative division, zone. It was used for harmonizing the GLD variable "subnatid2" for 1999.| [LFS Annual Report 1999](utilities/ETH_1999_LFS_report.pdf)|    
 | [ETH_zone_naming_2005](utilities/Additional%20Data/ETH_zone_naming_2005.dta)  | A code list containing the codes and names of Ethiopia's second-level administrative division, zone. It was used for harmonizing the GLD variable "subnatid2" for 2005.|[LFS Rural Codebook 2005](utilities/2005LFS_Rural_Codebook.pdf), [LFS Urban Codebook 2005](utilities/2005LFS_Urban_Codebook.pdf) |
 | [ETH_subnatid_2021](utilities/Additional%20Data/ETH_2021_subnatid_codebook.dta)  | A comprehensive code list containing the codes and names of region, zone, wereda, town, kebele, and enumeration area in Ethiopia. It was used for harmonizing the GLD variable `subnatid2` and `subnatid3` for 2021.|[LFS Codebook 2021](utilities/CODEBOOK_2021_LMS.xlsx)|    
