Update 1. Introduction to RWA LFS.md

--- a/Support/B - Country Survey Details/RWA/LFS/1. Introduction to RWA LFS.md
+++ b/Support/B - Country Survey Details/RWA/LFS/1. Introduction to RWA LFS.md
@@ -63,7 +63,7 @@ There were adjustments made in the 2020 Rwanda LFS in response to the Covid-19 p
 
 ### Employment: Industry Classification
 
-The Rwanda LFS follows a customized version of the ISIC version 4 called CISIC (see [here](utilities/RWA_CISIC.pdf)). However, there were codes that cannot be found in both the CISIC and ISIC version 4. The closest digit available was used when coding ISIC correspondence. For example, industry code "5111" was mapped to "5100" since no valid ISIC code can be found for the 3-digit equivalent, "5110". 
+The Rwanda LFS follows a customized version of the ISIC version 4 called CISIC (see [here](utilities/RWA_CISIC.pdf)). However, there were codes that cannot be found in both the CISIC and ISIC version 4. The closest digit available was used when coding ISIC correspondence. For example, industry code "5111" was mapped to "5110". 
 
 ### Employment: Occupation Classification
 
